--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,8 +1,8 @@
 html,body{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
 }
 
 #sidebar {
@@ -36,15 +36,15 @@ html,body{
 
 /* Clock */
 .zn-clock {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    color: #17D4FE;
-    font-size: 13px;
-    font-weight: 60px;
-    font-family: Orbitron;
-    letter-spacing: 2px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	color: #17D4FE;
+	font-size: 13px;
+	font-weight: 60px;
+	font-family: Orbitron;
+	letter-spacing: 2px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -59,4 +59,15 @@ input[type=number] {
   -moz-appearance: textfield !important;
   -webkit-appearance: textfield !important;
   appearance: textfield !important;
+}
+
+.zn-blocker.active {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 8998;
+	background-color: black;
+	opacity: 0.5;
 }
